--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_dYJco5wlQtCPP8bwbAD3i48Os6_Ltbc"></script>
         <script src="app.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_dYJco5wlQtCPP8bwbAD3i48Os6_Ltbc&callback=initMap"></script>
+        
     </body>
 </html>
