--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
                     <p class="lead">You Can Look For Things You Like</p>
 
+                    <select class="center-block form-control" id="dropdown">
+                      <option value="" selected> </option>
+                      <option value="Parks">Parks</option>
+                      <option value="Landmarks">Off Leash</option>
+                      <option value="">Basketball courts</option>
+                      <option value="">wading pools</option>
+                      <option value="">children play area</option>
+                    </select>
+                    <br>
+
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
 
                     <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
