--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
 
                 <div class="col-lg-8 col-lg-offset-2">
 
-                    <h1 class="text-center">Socrata Hackathon</h1>
+                    <h1 class="text-center">City Features</h1>
 
-                    <p class="lead">You Can Look For Things You Like</p>
+                    <p class="lead">What does the city offer near you?</p>
 
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-                    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+                    <p><strong>City Features makes is easy to find city maintained facilities near you.</strong> Use the drop down menu to find parks, basketballs courts, pools, and more, all through out Seattle. Make use of your free city features.</p>
                     
                 </div>
 
