--- a/index.html
+++ b/index.html
@@ -16,24 +16,21 @@
 
                 <div class="col-lg-8 col-lg-offset-2">
 
-                    <h1 class="text-center">Socrata Hackathon</h1>
+                    <h1 class="text-center"> Your interests mapped all in one place!</h1>
 
-                    <p class="lead">You Can Look For Things You Like</p>
+                    <p class="lead text-center">What would you like to find today?</p>
 
                     <select class="center-block form-control" id="dropdown">
-                      <option value="" selected> </option>
+                      <option value="" selected>Select Your Interests</option>
                       <option value="Parks">Parks</option>
-                      <option value="Landmarks">Off Leash</option>
+                      <option value="">Off Leash</option>
                       <option value="">Basketball courts</option>
                       <option value="">wading pools</option>
                       <option value="">children play area</option>
                     </select>
                     <br>
 
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-                    <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
-                    
+                    <p class="text-justify">With Groopie you can easily populate a map with all of your interests! Before Groopie you had to chart your own map. Individually having to either remember or create your own pins to find your varied interests in one spot. Now living in Seattle 2016, where the future is here. You no longer need to be a cartographer, because we’ll do all the dirty work for you. Want to find a park with basketball courts and wading pools? We got you. We’re the gang, and we look out for you.</p>
                 </div>
 
             </div> 
