map and markers show up

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
                     <p class="lead">What does the city offer near you?</p>
 
+                    <select class="center-block form-control" id="dropdown">
+                                        <option value="" selected>Select Your Interests</option>
+                     <option value="Parks">Parks</option>
+                     <option value="">Off Leash</option>
+                     <option value="">Basketball courts</option>
+                     <option value="">wading pools</option>
+                     <option value="">children play area</option>
+                   </select>
+
                     <p><strong>City Features makes is easy to find city maintained facilities near you.</strong> Use the drop down menu to find parks, basketballs courts, pools, and more, all through out Seattle. Make use of your free city features.</p>
                     
                 </div>
@@ -31,8 +40,8 @@
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_dYJco5wlQtCPP8bwbAD3i48Os6_Ltbc"></script>
         <script src="app.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_dYJco5wlQtCPP8bwbAD3i48Os6_Ltbc&callback=initMap"></script>
         
     </body>
 </html>
