--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Socrata Hackathon</title>
+        <title>Groopie</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -16,20 +16,22 @@
 
                 <div class="col-lg-8 col-lg-offset-2">
 
-                    <h1 class="text-center">City Features</h1>
+                    <h1 class="text-center">Your interests mapped all in one place!</h1>
 
-                    <p class="lead">What does the city offer near you?</p>
+                    <p class="lead">What would you like to find today?</p>
 
                     <select class="center-block form-control" id="dropdown">
                                         <option value="" selected>Select Your Interests</option>
                      <option value="Parks">Parks</option>
-                     <option value="">Off Leash</option>
-                     <option value="">Basketball courts</option>
-                     <option value="">wading pools</option>
-                     <option value="">children play area</option>
+                     <option value="Off Leash Areas">Off Leash Dog Areas</option>
+                     <option value="Basketball Courts">Basketball Courts</option>
+                     <option value="Wading Pools">Wading Pools</option>
+                     <option value="Childrens Play Areas">Childrens Play Areas</option>
                    </select>
 
-                    <p><strong>City Features makes is easy to find city maintained facilities near you.</strong> Use the drop down menu to find parks, basketballs courts, pools, and more, all through out Seattle. Make use of your free city features.</p>
+                    <p><strong>With Groopie you can easily populate a map with all of your interests!</strong> Before Groopie you had to chart your own map. Individually having to either remember or create your own pins to find your varied interests in one spot. Now living in Seattle 2016, where the future is here. You no longer need to be a cartographer, because we’ll do all the dirty work for you. Want to find a park with basketball courts and wading pools? We got you.
+
+We’re the gang, and we look out for you.</p>
                     
                 </div>
 
