--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                    <option value="Basketball Courts">Basketball Courts</option>
                    <option value="Wading Pools">Wading Pools</option>
                    <option value="Childrens Play Areas">Childrens Play Areas</option>
+                   <option value="clear">Clear Map</option>
+
                  </select>
                   <br>
                  <p><strong>With Groopie you can easily populate a map with all of your interests!</strong> Before Groopie you had to chart your own map. Individually having to either remember or create your own pins to find your varied interests in one spot. Now living in Seattle 2016, where the future is here. You no longer need to be a cartographer, because we’ll do all the dirty work for you. Want to find a park with basketball courts and wading pools? We got you. We’re the gang, and we look out for you.</p>
