form disables after selecting items, and can be reset

--- a/index.html
+++ b/index.html
@@ -20,14 +20,23 @@
 
                   <p class="lead">What would you like to find today?</p>
 
-                  <select class="center-block form-control" id="dropdown">
+                  <select multiple class="center-block form-control" id="dropdown">
                    <option value="" selected>Select Your Interests</option>
-                   <option value="Parks">Parks</option>
-                   <option value="Off Leash Areas">Off Leash Dog Areas</option>
-                   <option value="Basketball Courts">Basketball Courts</option>
-                   <option value="Wading Pools">Wading Pools</option>
-                   <option value="Childrens Play Areas">Childrens Play Areas</option>
-                   <option value="clear">Clear Map</option>
+                   <!-- <option value="Parks">Parks</option> -->
+                   <option class="selectPlace" id="Off Leash Areas" value="Off Leash Areas">Off Leash Dog Areas</option>
+                   <option class="selectPlace" id="Basketball Courts" value="Basketball Courts">Basketball Courts</option>
+                   <option class="selectPlace" id="Tennis Courts" value="Tennis Courts">Tennis Courts</option>
+                   <option class="selectPlace" id="Beaches" value="Beaches">Beaches</option>
+                   <option class="selectPlace" id="Pools" value="Pools">Pools</option>
+                   <option class="selectPlace" id="Wading Pool" value="Wading Pools">Wading Pools</option>
+                   <option class="selectPlace" id="Childrens Play Areas" value="Childrens Play Areas">Childrens Play Areas</option>
+                   <option class="selectPlace" id="Playfields" value="Playfields">Playfields</option>
+                   <option class="selectPlace" id="Boat Launches" value="Boat Launches">Boat Launches</option>
+                   <option class="selectPlace" id="Picnic Sites" value="Picnic Sites">Picnic Sites</option>
+                   <option class="selectPlace" id="Firepits" value="Firepits">Firepits</option>
+                   <option class="selectPlace" id="Fishing" value="Fishing">Fishing</option>
+                   <option class="selectPlace" id="Environmental Learning  Centers" value="Environmental Learning  Centers">Environmental Learning  Centers</option>
+                   <option id="clear" value="clear">Clear Map</option>
 
                  </select>
                   <br>
