--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <p>Make use of your free city features.</p>
       </div>
     </div>
+    <div onclick="openNav()" id="about">About This Site</div>
     <div id="map"></div>
     <div class="contain">
-
       <div  id="menu">
         <div id="select">Select What You Are Looking For</div>
         <div class="selectPlace" id="Off Leash Areas" value="Off Leash Areas">Off Leash Dog Areas</div>
@@ -35,12 +35,12 @@
         <div class="selectPlace" id="Picnic Sites" value="Picnic Sites">Picnic Sites</div>
         <div class="selectPlace" id="Firepits" value="Firepits">Firepits</div>
         <div class="selectPlace" id="Fishing" value="Fishing">Fishing</div>
-        <div class="selectPlace" id="Environmental Learning  Centers" value="Environmental Learning  Centers">Environmental Learning  Centers</div>
-        <div class="selectPlace" id="General Attractions" value="General Attractions">General Attractions</div>
         <div class="selectPlace" id="clear" value="clear">Clear Map</div>
+                <div class="selectPlace" id="General Attractions" value="General Attractions">General Attractions</div>
+                        <div class="selectPlace" id="Public Art" value="Public Art">Public Art</div>
+        <div class="selectPlace" id="Environmental Learning  Centers" value="Environmental Learning  Centers">Environmental Learning  Centers</div>
 
       </div>
-      <div onclick="openNav()" id="about">About This Site</div>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
