--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="selectPlace" id="clear" value="clear">Clear Map</div>
                 <div class="selectPlace" id="General Attractions" value="General Attractions">General Attractions</div>
                         <div class="selectPlace" id="Public Art" value="Public Art">Public Art</div>
-        <div class="selectPlace" id="Environmental Learning  Centers" value="Environmental Learning  Centers"><span>Environmental Learning  Centers</span></div>
+        <div class="selectPlace" id="Environmental Learning  Centers" value="Environmental Learning  Centers"><span>Environmental<br>Learning  Centers</span></div>
 
       </div>
     </div>
