--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrKLAeSAy-OljbVm_R3CwqGFT_uFPhOmQ"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="app.js"></script>
     <script src="about.js"></script>
   </body>
